--- a/slides/outro.adoc
+++ b/slides/outro.adoc
@@ -19,7 +19,7 @@ image::title.webp[background, blur, size=fill]
 
 [.step]
 * Lambda : ce n'est pas juste une flèche
-* Function : prend un truc, renvoie un truc
+* Function : prend un truc, renvoie un machin
 * Consumer : prend un truc, renvoie rien
 * Supplier : prend rien, renvoie un truc
 * Predicate : prend un truc, renvoie un booléen
